test(history): update prior authority history assertions